XB-24: fix shifting in chat page

--- a/skillsharing/features/SkillsTags/SkillsTags.scss
+++ b/skillsharing/features/SkillsTags/SkillsTags.scss
@@ -1,7 +1,8 @@
 .skills-tags {
-    flex-grow: 1;
     display: flex;
     flex-direction: column;
+    min-width: 30%;
+    padding-right: 20px;
 
     &__tag {
         padding: 5px 10px;
