--- a/skillsharing/pages/Dialogs/ui/Dialogs.scss
+++ b/skillsharing/pages/Dialogs/ui/Dialogs.scss
@@ -1,7 +1,7 @@
 .dialogs {
     display: flex;
     flex-direction: column;
-    flex-grow: 3;
+    flex-grow: 1;
     padding: 30px;
     align-items: stretch;
     gap: 10px;
@@ -10,5 +10,6 @@
         display: flex;
         width: 100%;
         padding-top: 50px;
+        justify-content: space-between;
     }
 }
